# open_cv

./: .gitignore  README.adoc  README.md  pyproject.toml
SecQR/: .gitignore  README.adoc  SecQR_V_1_0_2.py  mfa_totp.py  pyproject.toml
